# mag-hmr2300

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  LICENSE  flake.nix  hmr2300.ioc  openocd.cfg
.github/workflows/: build.yml
Core/Inc/: hmr.h  main.h  stm32f3xx_it.h
Core/Src/: hmr.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
cmake/stm32cubemx/: CMakeLists.txt
hmrtool/: CMakeLists.txt
hmrtool/src/: main.cpp
lib/: CMakeLists.txt  hmr2300_config.h.in
lib/include/: hmr2300.h
lib/include/hmr2300/: callbacks.h  handle.h  state.h  status.h
lib/src/: hmr2300.c  hmr2300.cpp
